# solar-system-info

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
mongodb-init/: init.sh
mongodb-init/collections/: users.json
src/: db.rs  dto.rs  error.rs  handlers.rs  main.rs  model.rs  redis.rs  services.rs
src/services/: basic_auth.rs  planet_service.rs  rate_limit_service.rs  user_service.rs
templates/: index.html
